# PhishMail

./: Licence  README.md  pyproject.toml  requirements.txt
phishmail/: __init__.py  main.py
phishmail/templates/: discord.html  facebook.html  gmail.html  instagram.html  paypal.html  riotgames.html  steam.html
