[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phishmail"
version = "1.0.0"
description = "Educational phishing simulation tool for security awareness training"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "ScriptKiddie" }
]

dependencies = [
    "Flask>=2.0",
    "waitress>=2.1",
    "jinja2>=3.0"
]

[project.scripts]
phishmail = "phishmail.main:main"
